kustomize/ing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-traefik
  namespace: argocd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - argocd.yukaringermany.com
      secretName: argocd-ingress-tls
  rules:
    - host: argocd.yukaringermany.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 80
